# python_piscine

./: .gitignore
0_Starting/ex00/: Hello.py
0_Starting/ex01/: format_ft_time.py
0_Starting/ex02/: find_ft_type.py
0_Starting/ex03/: NULL_not_found.py
0_Starting/ex04/: whatis.py
0_Starting/ex05/: building.py
0_Starting/ex06/: filterstring.py  ft_filter.py
0_Starting/ex07/: sos.py
0_Starting/ex08/: Loading.py  tester.py
0_Starting/ex09/: test.py  tester.py
0_Starting/ex09/ft_package/: LICENSE  README.md  pyproject.toml
0_Starting/ex09/ft_package/ft_package/: __init__.py
1_Array/ex00/: give_bmi.py
1_Array/ex01/: array2D.py  tester.py
1_Array/ex02/: load_image.py  tester.py
1_Array/ex03/: load_image.py
